# anchor-py

./: README.md
anchor-pki/: NOTES.md  README.md  pyproject.toml
anchor-pki/example/: gunicorn.conf.py
anchor-pki/src/anchor_pki/: acme.py  anchor.py
anchor-pki/src/anchor_pki/autocert/: configuration.py  identifier_policy.py  managed_certificate.py  manager.py  policy_check.py  sni_callback.py  terms_of_service.py
anchor-pki/tests/: conftest.py
anchor-pki/tests/anchor_pki/: test_anchor.py
anchor-pki/tests/anchor_pki/autocert/: test_configuration.py  test_identifier_policy.py  test_managed_certificate.py  test_manager.py  test_policy_check.py  test_terms_of_service_accceptor.py
anchor-pki/tests/anchor_pki/autocert/cassettes/test_manager/: TestManagerCert.test_has_all_names_requested.yaml  TestManagerCert.test_managed_certificate.yaml  TestManagerCert.test_managed_subdomain_certificate.yaml  TestManagerCert.test_provision_raises_error_if_identifier_not_allowed.yaml  TestManagerCert.test_provisions_certificate.yaml  TestManagerCert.test_return_fallback_cert_if_all_ids_are_denied.yaml  TestManagerCert.test_returns_the_memory_cached_certificate.yaml  TestManagerCert.test_returns_the_same_cert_from_disk_cache.yaml  TestManagerRenwalLogic.renewal_logic_common.yaml  TestManagerRewalLogic.test_returns_a_new_cert_upon_expiration.yaml
anchor-pki/tests/anchor_pki/autocert/test_managed_certificate/: cert-data-1.json
